# Burnscar

./: .gitignore  Arson_Analyser.py  Burn_Scar_Detection_Utils.py  DataFetcher.py  README.md  example.env  pyproject.toml  test.http  test.py  test_gpu.py
docs/: dag.excalidraw  overview.excalidraw  validation.py
original/: Arson_Analyser.py  test_gpu.py
sqlmesh/: config.yaml  db.db.wal  db.duckdb.wal
sqlmesh/macros/: spatial.py  spatial_index.py
sqlmesh/models/: areas.py  firms.sql  firms_clustered.sql  firms_raw.py  firms_to_retry.sql  firms_to_validate.sql  firms_to_validate_try.sql  firms_validated.py  firms_validated.sql  firms_validated_clustered.sql  firms_validated_try.py  gadm.py  geonames.py  geonames_distances.sql  nearest_settlements.sql  output.sql  output_clustered.sql  output_to_disk.py  raw_firms.sql  settlements.sql
sqlmesh/models/arson/mart/: firms_validated.sql
sqlmesh/models/arson/reference/: geonames.py
sqlmesh/models/arson/utils/: write_to_disk.py
sqlmesh/models/mart/: firms_validated.sql  firms_validated_clustered.sql
sqlmesh/models/marts/: mart_firms_validated.sql  mart_firms_validated_clustered.sql
sqlmesh/models/reference/: areas.py  gadm.py  geonames.py  ref_areas.py  ref_gadm.py  ref_geonames.py
sqlmesh/models/staging/: firms.py  stg_firms.py
sqlmesh/models/utils/: util_write_to_disk.py  write_to_disk.py
sqlmesh_project/models/: firms_raw.py  firms_validated_try.py
src/arson/: cli.py  linkgen.py
src/arson/fetchers/: gadm.py  test.http
src/arson/validators/: gee.py
src/arson_analyser/: __init__.py  config.py  linkgen.py  main.py  models.py  structure.py  utils.py
src/arson_analyser/analyser/: validate.py
src/arson_analyser/cli/: fetch.py  gadm.py  main.py  run.py  structure.py  validate.py
src/arson_analyser/fetchers/: base.py  gadm.py  nasa.py
src/arson_analyser/fetchers/nasa/: fetcher.py  schema.py
src/arson_analyser/pipeline/: collect.py  fetch.py  ingest.py  log.py  main.py  sql.py
src/arson_analyser/pipeline/queries/: areas.sql  clustered_events.sql  create_areas_exclude.sql  create_areas_include.sql  create_areas_whitelist.sql  create_clustered_events.sql  create_firms.sql  create_firms_joined.sql  create_gadm.sql  create_gadm_index.sql  create_nearest_settlements.sql  create_raw_data.sql  create_settlements.sql  create_settlements_index.sql  firms.sql  raw_data.sql  (+17 more)
src/arson_analyser/storage/: base.py  duckdb.py
src/arson_analyser/validators/: gee.py  models.py
src/burnscar/: cli.py  copernicus.js  linkgen.py  models.py  utils.py
src/burnscar/fetchers/: gadm.py  geonames.py  nasa.py
src/burnscar/validators/: gee.py
tests/test_validators/: test_gee.py
(+3 files in other folders)
