[project]
name = "arson-analyser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Tom", email = "tom.uijtdehaag@bigdatarepublic.nl" }
]
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.2.1",
    "earthengine-api>=1.5.4",
    "geopandas>=1.0.1",
    "httpx>=0.28.1",
    "pandas>=2.2.3",
    "pyarrow>=19.0.1",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "python-dotenv>=1.0.1",
    "shapely>=2.0.7",
    "tqdm>=4.67.1",
    "typer>=0.15.2",
]

[project.scripts]
arson-analyser = "arson_analyser:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pandas-stubs>=2.2.3.250308",
    "pytest>=8.3.5",
    "ruff>=0.9.10",
    "types-shapely>=2.0.0.20250202",
]
