[project]
name = "arson"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Tom", email = "tom.uijtdehaag@bigdatarepublic.nl" }
]
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.2.1",
    "earthengine-api>=1.5.4",
    "geopandas>=1.0.1",
    "httpx>=0.28.1",
    "pandas>=2.2.3",
    "pyarrow>=19.0.1",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "python-dotenv>=1.0.1",
    "rich>=13.9.4",
    "shapely>=2.0.7",
    "sqlmesh[web]>=0.170.1",
    "tqdm>=4.67.1",
]

[project.scripts]
arson = "arson.cli:sqlmesh_cli"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pandas-stubs>=2.2.3.250308",
    "pytest>=8.3.5",
    "ruff>=0.9.10",
    "sqlfluff>=3.4.0",
    "types-shapely>=2.0.0.20250202",
    "types-tqdm>=4.67.0.20250319",
]
